
* Breaking changes *
  - #4577, Drop support for PostgreSQL 9.5 (Raúl Marín)
  - #4579, Drop postgis_proc_set_search_path.pl (Raúl Marín)
  - #4601, ST_TileEnvelope signature changed.

* New features *
  - #4601, Add ST_TileEnvelope margin argument (Yuri Astrakhan)
  - #2972, Add quiet mode (-q) to pgsql2shp (Kristian Thy)
  - #4617, Add configure switch `--without-phony-revision` (Raúl Marín)

* Enhancements *
  - #4539, Unify libm includes (Raúl Marín)
  - #4569, Allow unknown SRID geometry insertion into typmod SRID column (Paul Ramsey)
  - #4149, ST_Simplify(geom, 0) is now O(N).
           ST_Affine (ST_Translate, ST_TransScale, ST_Rotate) optimized.
           ST_SnapToGrid optimized. (Darafei Praliaskouski)
  - #4574, Link Time Optimizations enabled (Darafei Praliaskouski)
  - #4578, Add parallellism and cost properties to brin functions (Raúl Marín)
  - #4473, Silence yacc warnings (Raúl Marín)
  - #4589, Disable C asserts when building without "--enable-debug" (Raúl Marín)
  - #4543, Introduce ryu to print doubles (Raúl Marín)

* Bug fixes *
  - #4544, Fix leak when parsing a WKT geometry_list (Raúl Marín)
  - #4545, Fix leak in wkt_parser_triangle_new (Raúl Marín)
  - #4549, Fix several functions when the schema isn't the search_path (Raúl Marín)
  - #4546, Fix PLPGSQL functions missing the schema qualification (Raúl Marín)
  - #4558, Fix oversimplification of polygon inner rings (Raúl Marín)
  - #4588, Fix update when st_union(geometry) doesn't exist (Raúl Marín)
  - #4590, Fix pg_upgrade issue with st_linecrossingdirection (Raúl Marín)
  - #4592, Add missing CPPFLAGS in multiple Makefiles (Raúl Marín)
  - #4599, ST_AddPoint: Accept -1 as a valid position (Raúl Marín)
  - #4600, Improve precision of ST_TileEnvelope (Raúl Marín)
  - #4608, PG12: Fix several bugs in the index support function (Raúl Marín)


PostGIS 3.0.0
2019/10/20

This version requires PostgreSQL 9.5+-12 and GEOS >= 3.6+