@@ -5,6 +5,14 @@ BOX3D(0 0.1 -55,11 12 12)
 20464
 15824
 11184
+#3057|SRID=4326;POINT(1 1 0)
+#3057|SRID=4326;POINT(1 1 1)
+#3057|SRID=4326;POINT(1 1 0)
+#3057|SRID=4326;POINT(1 1 1)
+#3057|SRID=4326;POINTM(1 1 0)
+#3057|SRID=4326;POINTM(1 1 2)
+#3057|SRID=4326;POINT(1 1 0 0)
+#3057|SRID=4326;POINT(1 1 1 2)
 #3069|Point[S]
 #3069|LineString[S] with 2 points
 #3069|MultiPoint[S] with 1 element:   Point[S]
