@@ -14,6 +14,7 @@ PostGIS 3.1.0
   - #4601, Add ST_TileEnvelope margin argument (Yuri Astrakhan)
   - #2972, Add quiet mode (-q) to pgsql2shp (Kristian Thy)
   - #4617, Add configure switch `--without-phony-revision` (Raúl Marín)
+  - #3057, Optional value params for Force3D*, Force4D functions (Kristian Thy)
 
 * Enhancements *
   - #4539, Unify libm includes (Raúl Marín)
